# Auly-ManageStockC

./: CMakeLists.txt  README.md  bddMethods.c  bddMethods.h  config.txt  createDatabase.sql  curlBdd.c  curlBdd.h  data.txt  installAulyStock.sh  main.c  window main.glade  window.c  window.h  window_main.glade
